Mejora de logica
