# src/main/resources/openapi/transaction-service-openapi.yaml
@@ -90,10 +90,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/TemplateResponse'
 
-  /transactions/balance/{productId}:
+  /report/ReportAvailableBalance/{productId}:
     get:
       summary: Consultar saldo disponible de un producto bancario o tarjeta de crédito
-      operationId: getAvailableBalance
+      operationId: generateReportAvailableBalance
       parameters:
         - name: productId
           in: path
@@ -126,13 +126,13 @@ paths:
               schema:
                 $ref: '#/components/schemas/TemplateResponse'
 
-  /transactions/apply-monthly-fee:
+  /transactions/applyMonthlyTasks:
     post:
-      summary: Aplicar comisión mensual por mantenimiento
-      operationId: applyMonthlyFee
+      summary: Simular operaciones mensuales
+      operationId: applyMonthlyTasks
       responses:
         '200':
-          description: Comisión aplicada correctamente
+          description: Tareas mensuales completadas correctamente
           content:
             application/json:
               schema:
